remove the spring dependency from the `usecase` package; fix the usecase and rest