@@ -41,7 +41,7 @@ subprojects {
     }
 
     jacocoTestCoverageVerification {
-        dependsOn(jacocoTestReport)
+        dependsOn jacocoTestReport
 
         violationRules {
 
@@ -57,4 +57,17 @@ subprojects {
             }
         }
     }
+
+    tasks.withType(JavaCompile) {
+        options.compilerArgs += '--enable-preview'
+    }
+
+    tasks.withType(Test) {
+        jvmArgs += '--enable-preview'
+    }
+
+    tasks.withType(JavaExec) {
+        jvmArgs += '--enable-preview'
+    }
+
 }
